--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+.flexxy {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -145,6 +150,7 @@ h5 {
 }
 h1 {
   font-size: 4rem;
+  padding-top: 7px;
 }
 h2 {
   font-size: 3.2rem;
@@ -224,4 +230,34 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+header {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  align-content: center;
+  padding-top: 50px;
+  padding-bottom: 30px;
+  border-bottom: 1px dashed black;
+}
+header nav {
+  padding-top: 0 auto;
+  display: flex;
+}
+@media (max-width: 500px) {
+  header nav {
+    display: flex;
+    flex-direction: column;
+  }
+}
+header a {
+  text-decoration: none;
+  justify-content: space-between;
+  color: black;
+  padding: 10px;
+  font-size: 20px;
+}
+.fun-bus {
+  width: 100%;
+  height: 100%;
 }
