--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,3 +59,33 @@
     }
   }
 }// home
+header{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  align-content: center;
+  padding-top: 50px;
+  padding-bottom: 30px;
+  border-bottom: 1px dashed black;
+    nav{
+      padding-top: 0 auto;
+      display: flex;
+      @media(max-width: 500px){
+        display: flex;
+        flex-direction: column;
+  
+      }
+    }
+      a{
+        text-decoration: none;
+        justify-content: space-between;
+        color: black;
+        padding: 10px;
+        font-size: 20px;
+      }
+}
+
+.fun-bus{
+  width: 100%;
+  height: 100%;
+}
