--- a/index.css
+++ b/index.css
@@ -261,3 +261,10 @@ header a {
   width: 100%;
   height: 100%;
 }
+.btn {
+  border: 2px solid teal;
+  border-radius: 7px;
+  color: white;
+  background-color: teal;
+  text-align: center;
+}
