--- a/index.css
+++ b/index.css
@@ -258,13 +258,15 @@ header a {
   font-size: 20px;
 }
 .fun-bus {
-  width: 100%;
-  height: 100%;
+  padding-top: 20px;
 }
 .btn {
   border: 2px solid teal;
-  border-radius: 7px;
+  border-radius: 10px;
   color: white;
   background-color: teal;
   text-align: center;
+  font-size: 2rem;
+  padding: 10px 0 10px 0;
+  width: 200px;
 }
