--- a/less/home-page.less
+++ b/less/home-page.less
@@ -62,7 +62,7 @@
 header{
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-evenly;
+  justify-content: space-evenly;;
   align-content: center;
   padding-top: 50px;
   padding-bottom: 30px;
@@ -86,14 +86,16 @@ header{
 }
 
 .fun-bus{
-  width: 100%;
-  height: 100%;
+  padding-top: 20px;
 }
 
 .btn{
   border: 2px solid teal;
-  border-radius: 7px;
+  border-radius: 10px;
   color: white;
   background-color: teal;
   text-align: center;
+  font-size: 2rem;
+  padding: 10px 0 10px 0;
+  width: 200px;
 }
