--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
+.btn {
+  border: 2px solid teal;
+  border-radius: 10px;
+  color: white;
+  background-color: teal;
+  text-align: center;
+  font-size: 2rem;
+  padding: 10px 0 10px 0;
+  width: 150px;
+}
 .flexxy {
   display: flex;
   justify-content: space-between;
@@ -268,5 +278,5 @@ header a {
   text-align: center;
   font-size: 2rem;
   padding: 10px 0 10px 0;
-  width: 200px;
+  width: 150px;
 }
