--- a/less/home-page.less
+++ b/less/home-page.less
@@ -90,12 +90,5 @@ header{
 }
 
 .btn{
-  border: 2px solid teal;
-  border-radius: 10px;
-  color: white;
-  background-color: teal;
-  text-align: center;
-  font-size: 2rem;
-  padding: 10px 0 10px 0;
-  width: 200px;
+  .btn();
 }
