--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,16 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+//btn
+
+.btn{
+    border: 2px solid teal;
+    border-radius: 10px;
+    color: white;
+    background-color: teal;
+    text-align: center;
+    font-size: 2rem;
+    padding: 10px 0 10px 0;
+    width: 150px;
+}
