--- a/less/home-page.less
+++ b/less/home-page.less
@@ -62,7 +62,7 @@
 header{
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-evenly;;
+  justify-content: space-evenly;
   align-content: center;
   padding-top: 50px;
   padding-bottom: 30px;
@@ -75,6 +75,9 @@ header{
         flex-direction: column;
   
       }
+    }
+    h1{
+     padding-left: 80px ;
     }
       a{
         text-decoration: none;
@@ -92,3 +95,4 @@ header{
 .btn{
   .btn();
 }
+
