--- a/less/global.less
+++ b/less/global.less
@@ -33,6 +33,7 @@ p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
+  font-weight: @font-weight;
 }
 
 img {
@@ -44,4 +45,7 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+.destination{
+  border: 2px solid blue;
 }
