--- a/less/home-page.less
+++ b/less/home-page.less
@@ -64,9 +64,6 @@ header{
   flex-direction: row-reverse;
   justify-content: space-evenly;
   align-content: center;
-  padding-top: 50px;
-  padding-bottom: 30px;
-  border-bottom: 1px dashed black;
     nav{
       padding-top: 0 auto;
       display: flex;
@@ -76,20 +73,22 @@ header{
   
       }
     }
-    h1{
-     padding-left: 80px ;
-    }
       a{
         text-decoration: none;
         justify-content: space-between;
         color: black;
         padding: 10px;
-        font-size: 20px;
+        font-size:18px;
       }
 }
 
 .fun-bus{
   padding-top: 20px;
+}
+
+.fun-img{
+  border-top: 2px dashed black;
+  margin-top: 0 auto;
 }
 
 .btn{
