--- a/index.css
+++ b/index.css
@@ -160,7 +160,6 @@ h5 {
 }
 h1 {
   font-size: 4rem;
-  padding-top: 7px;
 }
 h2 {
   font-size: 3.2rem;
@@ -186,6 +185,10 @@ img {
 }
 .destination {
   border: 2px solid blue;
+}
+nav {
+  font-size: 16px;
+  font-weight: bold;
 }
 .footer {
   width: 100%;
@@ -248,16 +251,14 @@ header {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-evenly;
-  align-content: center;
+  align-items: baseline;
 }
 header nav {
-  padding-top: 0 auto;
   display: flex;
 }
 @media (max-width: 500px) {
   header nav {
-    display: flex;
-    flex-direction: column;
+    flex-direction: row;
   }
 }
 header a {
