--- a/less/home-page.less
+++ b/less/home-page.less
@@ -63,14 +63,11 @@ header{
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-evenly;
-  align-content: center;
+  align-items: baseline;
     nav{
-      padding-top: 0 auto;
       display: flex;
       @media(max-width: 500px){
-        display: flex;
-        flex-direction: column;
-  
+        flex-direction: row;
       }
     }
       a{
@@ -94,4 +91,6 @@ header{
 .btn{
   .btn();
 }
+
+
 
