--- a/less/global.less
+++ b/less/global.less
@@ -28,12 +28,14 @@ h2 {
 h4 {
   font-size: 2.5rem;
   padding-bottom: 10px;
+  font-weight: @font-weight;
 }
 
 p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
+
 }
 
 img {
@@ -48,4 +50,11 @@ img {
 }
 .destination{
   border: 2px solid blue;
+}
+.content-pick{
+  border: 2px solid red;
+  width: 100%;
+    @media @min500{
+      flex-direction: column;
+    }
 }
