--- a/less/global.less
+++ b/less/global.less
@@ -50,11 +50,14 @@ img {
 }
 .destination{
   border: 2px solid blue;
+    @media @min500{
+      
+    }
 }
 .content-pick{
   border: 2px solid red;
-  width: 100%;
     @media @min500{
+      padding: 0 auto;
       flex-direction: column;
       align-items: center;
     }
