--- a/less/home-page.less
+++ b/less/home-page.less
@@ -52,6 +52,9 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+      @media @min500{
+        padding-top: 0;
+      }
 
     .destination {
       width: 30%;
