--- a/index.css
+++ b/index.css
@@ -162,6 +162,12 @@ h1 {
   font-size: 4rem;
   font-weight: bold;
 }
+@media (max-width: 500px) {
+  h1 {
+    display: flex;
+    justify-content: center;
+  }
+}
 h2 {
   font-size: 3.2rem;
   padding-bottom: 10px;
@@ -176,6 +182,7 @@ p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
+  font-weight: bold;
 }
 img {
   max-width: 100%;
@@ -189,12 +196,17 @@ img {
 .destination {
   border: 2px solid blue;
 }
+@media (max-width: 500px) {
+  .destination {
+    margin: 0 auto;
+  }
+}
 .content-pick {
   border: 2px solid red;
 }
 @media (max-width: 500px) {
   .content-pick {
-    padding: 0 auto;
+    margin: 0 auto;
     flex-direction: column;
     align-items: center;
   }
@@ -252,19 +264,18 @@ nav {
   border-radius: 10px;
 }
 .home .content-pick {
-  padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
 }
-@media (max-width: 500px) {
-  .home .content-pick {
-    padding-top: 0;
-  }
-}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 100%;
+  }
 }
 header {
   display: flex;
@@ -278,6 +289,7 @@ header nav {
 @media (max-width: 500px) {
   header nav {
     flex-direction: row;
+    align-items: center;
   }
 }
 header a {
@@ -288,7 +300,7 @@ header a {
   font-size: 18px;
 }
 .fun-bus {
-  padding-top: 20px;
+  padding-top: 30px;
 }
 .fun-img {
   border-top: 2px dashed black;
