--- a/less/global.less
+++ b/less/global.less
@@ -17,6 +17,10 @@ h1, h2, h3, h4, h5 {
 h1 {
   font-size: 4rem;
   font-weight: @font-weight;
+    @media @min500{
+      display: flex;
+      justify-content: center;
+    }
 }
 
 h2 {
@@ -35,7 +39,7 @@ p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
-
+  font-weight: @font-weight;
 }
 
 img {
@@ -51,13 +55,13 @@ img {
 .destination{
   border: 2px solid blue;
     @media @min500{
-      
+      margin: 0 auto;
     }
 }
 .content-pick{
   border: 2px solid red;
     @media @min500{
-      padding: 0 auto;
+      margin: 0 auto;
       flex-direction: column;
       align-items: center;
     }
