--- a/less/home-page.less
+++ b/less/home-page.less
@@ -56,7 +56,8 @@
       width: 30%;
       margin-bottom: 30px;
         @media @min500{
-          width: 100%;
+          width: 80%;
+          justify-content: center;
         }
     }
 
