--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,7 +5,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
+    border: 2px solid blue;
+      @media @min500{
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+      }
    
     
     .text-content {
@@ -15,13 +20,16 @@
           display: flex;
           flex-direction: column;
           align-items: center;
-          width: 100%;
         }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      border:2px solid red;
+        @media @min500{
+          width: 100%;
+        }
 
       img {
         border-radius: 10px;
