--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,7 +9,7 @@
       @media @min500{
         justify-content: center;
         align-items: center;
-        margin: 0 auto;
+        width: 100%;
       }
    
     
@@ -20,6 +20,7 @@
           display: flex;
           flex-direction: column;
           align-items: center;
+          width: 100%;
         }
     }
 
@@ -33,6 +34,7 @@
 
       img {
         border-radius: 10px;
+        border: 2px solid green;
       }
     }
   }
