--- a/index.css
+++ b/index.css
@@ -226,7 +226,6 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  border: 2px solid blue;
 }
 @media (max-width: 500px) {
   .home .content-section {
@@ -245,12 +244,12 @@ nav {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    padding-top: 15px;
   }
 }
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
-  border: 2px solid red;
 }
 @media (max-width: 500px) {
   .home .content-section .img-content {
@@ -259,7 +258,11 @@ nav {
 }
 .home .content-section .img-content img {
   border-radius: 10px;
-  border: 2px solid green;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content img {
+    width: 100%;
+  }
 }
 .home .inverse-content {
   padding-bottom: 30px;
@@ -284,6 +287,7 @@ nav {
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
+  border: 2px solid red;
 }
 .home .content-pick .destination {
   width: 30%;
@@ -293,6 +297,13 @@ nav {
   .home .content-pick .destination {
     width: 80%;
     justify-content: center;
+  }
+}
+@media (max-width: 500px) {
+  .home .content-pick .btn {
+    border: 2px solid blue;
+    margin: 0 0 0 110px;
+    padding: 0 auto;
   }
 }
 header {
