--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,7 +5,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    border: 2px solid blue;
       @media @min500{
         justify-content: center;
         align-items: center;
@@ -21,20 +20,22 @@
           flex-direction: column;
           align-items: center;
           width: 100%;
+          padding-top: 15px;
         }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
-      border:2px solid red;
         @media @min500{
           width: 100%;
         }
 
       img {
         border-radius: 10px;
-        border: 2px solid green;
+          @media @min500{
+            width: 100%;
+          }
       }
     }
   }
@@ -67,6 +68,7 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    border: 2px solid red;
 
     .destination {
       width: 30%;
@@ -76,6 +78,13 @@
           justify-content: center;
         }
     }
+      .btn{
+        @media @min500{
+          border: 2px solid blue;
+          margin: 0 0 0 110px;
+          padding: 0 auto;
+        }
+      }
 
   }
 }// home
