--- a/index.css
+++ b/index.css
@@ -287,7 +287,6 @@ nav {
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
-  border: 2px solid red;
 }
 .home .content-pick .destination {
   width: 30%;
@@ -312,16 +311,21 @@ header {
   justify-content: space-evenly;
   align-items: baseline;
 }
-header nav {
+@media (max-width: 500px) {
+  header h1 {
+    flex-direction: column;
+  }
+}
+nav {
   display: flex;
 }
 @media (max-width: 500px) {
-  header nav {
+  nav {
     flex-direction: row;
     align-items: center;
   }
 }
-header a {
+a {
   text-decoration: none;
   justify-content: space-between;
   color: black;
