--- a/less/global.less
+++ b/less/global.less
@@ -27,6 +27,11 @@ h2 {
   font-size: 3.2rem;
   padding-bottom: 10px;
   font-weight: @font-weight;
+      @media @min500{
+        border: 2px solid blue;
+        width:100%;
+        
+      }
 }
 
 h4 {
