--- a/index.css
+++ b/index.css
@@ -173,6 +173,12 @@ h2 {
   padding-bottom: 10px;
   font-weight: bold;
 }
+@media (max-width: 500px) {
+  h2 {
+    border: 2px solid blue;
+    width: 100%;
+  }
+}
 h4 {
   font-size: 2.5rem;
   padding-bottom: 10px;
@@ -310,11 +316,6 @@ header {
   flex-direction: row-reverse;
   justify-content: space-evenly;
   align-items: baseline;
-}
-@media (max-width: 500px) {
-  header h1 {
-    flex-direction: column;
-  }
 }
 nav {
   display: flex;
