--- a/less/home-page.less
+++ b/less/home-page.less
@@ -80,8 +80,9 @@
       .btn{
         @media @min500{
           border: 2px solid blue;
-          margin: 0 0 0 110px;
+          margin: 0 auto;
           padding: 0 auto;
+          width: 100%;
         }
       }
 
