--- a/index.css
+++ b/index.css
@@ -305,7 +305,6 @@ nav {
 }
 @media (max-width: 500px) {
   .home .content-pick .btn {
-    border: 2px solid blue;
     margin: 0 auto;
     padding: 0 auto;
     width: 100%;
@@ -316,6 +315,12 @@ header {
   flex-direction: row-reverse;
   justify-content: space-evenly;
   align-items: baseline;
+}
+@media (max-width: 500px) {
+  header {
+    justify-content: center;
+    align-items: center;
+  }
 }
 nav {
   display: flex;
