--- a/less/home-page.less
+++ b/less/home-page.less
@@ -79,7 +79,6 @@
     }
       .btn{
         @media @min500{
-          border: 2px solid blue;
           margin: 0 auto;
           padding: 0 auto;
           width: 100%;
@@ -93,6 +92,10 @@ header{
   flex-direction: row-reverse;
   justify-content: space-evenly;
   align-items: baseline;
+    @media @min500{
+      justify-content: center;
+      align-items: center;
+    }
     }
     nav{
       display: flex;
